syntax = "proto3";

package auth;

option go_package = ".;___auth";

import "authproto/user.proto";

message CreateUserRequest{
    User user = 1;
}

message CreateUserResponse{
    string success = 1;
}

message VerifyUserTokenRequest{
    string access_token = 1;
}

message VerifyUserTokenResponse{
    string name = 1;
    string role = 2;
    string access_token = 3;
}


service AuthService{
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){}
    rpc VerifyUser (VerifyUserTokenRequest) returns (VerifyUserTokenResponse){}
}